Wed Dec 16 20:30:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Various modifications suggested by <mguesdon@sbuilders.com> and
	<jagapen@whitewater.chem.wisc.edu>.  All untested.
	src/include/Port.h: ([+newForReceivingFromRegisteredName:fromPort:])
	Additional method for DO through firewalls.
	src/include/NSConnection.h: Addittional method for DO through firewall
	([+newRegisteringAtName:atPort:withRootObject:])
	Additional method for DO through firewalls.
	src/NSTask.h: Updated to MacOS-X spec - accepts NSPipes.
	src/TcpPort.m: ([+newForReceivingFromRegisteredName:fromPort:])
	Additional method for DO through firewalls. Removed obsolete name
	server code.
	src/NSConnection.m: Addittional method for DO through firewall
	([+newRegisteringAtName:atPort:withRootObject:])
	src/NSTask.m: Updated to MacOS-X spec - accepts NSPipes.

Tue Dec 15 13:25:10 1998  Adam Fedor  <fedor@doc.com>

	* src/NSUser.m (NSFullUserName): New function (not implemented).
	(NSStandardApplicationPaths): Likewise.
	(NSStandardLibraryPaths): Likewise.
	(NSTemporaryDirectory): New function (implemented).
	(NSOpenStepRootDirectory): Likewise.
	* src/include/NSPathUtilities.h: Defined new functions.
	* src/include/NSUserDefaults.h: Removed duplicate definitions.

Mon Dec 14  6:30:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* src/GNUmakefile: Put mframe.h in a machine/os specific directory.
	* src/Makefile.postamble: Install mframe.h in machine/os specific dir
	* src/NSConnection.m: include mframe.h form new location.
	* src/NSInvocation.m: ditto
	* src/NSMethodSignature.m: ditto
	* src/NSObjCRuntime.m: ditto
	* src/NSSerializer.m: ditto
	* src/mframe.m: ditto

Sat Dec 12 21:10:00 1998  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	src/NSUserDefaults.m: ([+standardUserDefaults]) set flag to avoid
	infinite recursion on initialisation. Error reported by
	Matthias Klose <doko@cs.tu-berlin.de>
